--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -1,14 +1,12 @@
 name: Generate terraform docs
-permissions: read-all
 on:
   - pull_request
 
 jobs:
   docs:
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3  # validate
       with:
         ref: ${{ github.event.pull_request.head.ref }}
 
